add package json

--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "slash"
   ],
   "author": "ruff",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^2.2.5",
+    "should": "^7.0.2"
+  }
 }
