--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "mocha": "^2.2.5",
     "mocha-lcov-reporter": "0.0.2",
     "should": "^7.0.2"
-  }
+  },
+  "repository": "purposeindustries/prepend-slash"
 }
